# hassio-addons

./: README.md  repository.json
assist_microphone/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml  requirements.txt
microwakeword/: DOCS.md  Dockerfile  README.md  config.yaml
openwakeword/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
porcupine1/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
rhasspy/: CHANGELOG.md  Dockerfile  README.md  build.json  config.json  run.sh
rhasspy-junior/: Dockerfile  config.yaml  run.sh
rhasspy-speech/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
rhasspy3-en/: Dockerfile  Dockerfile.base  README.md  build-base.sh  config.yaml  rhasspy3_configuration.yaml  run.sh
rhasspy3-template/: Dockerfile.base  build-base.sh  config.yaml
snowboy/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  build.yaml  config.yaml
speech-to-phrase/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  config.yaml
speech-to-phrase/src/: pyproject.toml
speech-to-phrase/src/speech_to_phrase/: __init__.py  __main__.py  audio.py  const.py  event_handler.py  g2p.py  hass_api.py  hassil_fst.py  models.py  speech_tools.py  train.py  transcribe.py
speech-to-phrase/src/speech_to_phrase/sentences/: en.yaml
stt-fallback/: DOCS.md  Dockerfile  README.md  config.yaml  requirements.txt
voice-de-thorsten/: Dockerfile  README.md  config.json  run.sh
voice-es-css10/: CHANGELOG.md  Dockerfile  README.md  config.json  run.sh
voice-fr-siwis/: CHANGELOG.md  run.sh  (+3 more)
(+126 files in other folders)
