[build-system]
requires = ["setuptools>=62.3"]
build-backend = "setuptools.build_meta"

[project]
name        = "speech_to_phrase"
version     = "0.0.1"
license     = {text = "Apache-2.0"}
description = "Fast but limited speech-to-text"
readme      = "README.md"
authors     = [
    {name = "The Home Assistant Authors", email = "hello@home-assistant.io"}
]
keywords    = ["home", "assistant", "speech", "recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.8.0"
dependencies = [
    "hassil>=2,<3",
    "PyYAML>=6,<7",
    "unicode-rbnf>=2.2,<3",
    "regex==2024.11.6",
    "wyoming==1.5.4",
    "aiohttp>=3,<4",
    "pysilero-vad>=2,<3",
    "pyring-buffer>=1,<2",
]

[project.urls]
"Source Code" = "http://github.com/OHF-voice/speech-to-phrase"

[tool.setuptools]
platforms = ["any"]
zip-safe  = true
include-package-data = true

[tool.setuptools.packages.find]
include = ["speech_to_phrase"]
exclude = ["tests", "tests.*"]

[project.scripts]
hassil = "hassil.__main__:main"
